--- a/app/webpack/stylesheets/modals/image_upploaders.scss
+++ b/app/webpack/stylesheets/modals/image_upploaders.scss
@@ -29,6 +29,7 @@
 .user-profile-image {
   height: 72px;
   width: 72px;
+  object-fit: cover;
   border-radius: 100px;
   margin: auto;
   position: absolute;
