--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -65,9 +65,8 @@ html
                 = image_pack_tag('media/images/icons/ic_settings.png')
               .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownMenuButton"
                 = link_to 'Customize', customize_fonts_path, class: 'dropdown-item'
-                a.dropdown-item href="#" Change Country
-                a.dropdown-item href="#" My Images
-                a.dropdown-item href="#" My Video
+                = link_to 'My Images', images_user_image_path(current_user.username), class: 'dropdown-item'
+                = link_to 'My Videos', videos_user_video_path(current_user.username), class: 'dropdown-item'
                 a.dropdown-item href="#" Contact Us
                 a.dropdown-item href="#" Privacy Policy & Terms of Use
                 a.dropdown-item href="#" About Us
