Add Spiner css to project

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -30,6 +30,7 @@ $grid-breakpoints: (
 @import 'kaminari';
 @import 'main-elements';
 @import 'notification';
+@import 'spiner';
 @import 'toggle-switcher';
 @import './comments/index';
 @import './font_customaizer/index';
