--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -30,13 +30,13 @@ html
             li.nav-item
               = link_to 'Calendar', root_path, class: 'nav-link'
             li.nav-item
-              = link_to 'Images', root_path, class: 'nav-link'
+              = link_to 'Images', images_user_image_path(current_user.username), class: 'nav-link'
             li.nav-item
               = link_to 'Posts', root_path, class: 'nav-link'
             li.nav-item
               = link_to 'Map', root_path, class: 'nav-link'
             li.nav-item
-              = link_to 'Video', root_path, class: 'nav-link'
+              = link_to 'Videos', videos_user_video_path(current_user.username), class: 'nav-link'
           - else
             li.nav-item
               = link_to 'Groups', '#', class: 'nav-link', data: { toggle: "modal", target: "#modal-sign-in-or-sign-up" }
@@ -65,8 +65,6 @@ html
                 = image_pack_tag('media/images/icons/ic_settings.png')
               .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownMenuButton"
                 = link_to 'Customize', customize_fonts_path, class: 'dropdown-item'
-                = link_to 'My Images', images_user_image_path(current_user.username), class: 'dropdown-item'
-                = link_to 'My Videos', videos_user_video_path(current_user.username), class: 'dropdown-item'
                 a.dropdown-item href="#" Contact Us
                 a.dropdown-item href="#" Privacy Policy & Terms of Use
                 a.dropdown-item href="#" About Us
