--- a/app/views/shared/modals/_edit_profile.slim
+++ b/app/views/shared/modals/_edit_profile.slim
@@ -54,10 +54,6 @@
                 = f.text_field :phone_number, class: 'form-control', type: 'number', value: current_user.phone_number
                 
           .material-field
-            = f.label 'Language'
-            = f.select :language_ids, options_for_select(Language.all.map{ |language| [language.title, language.id, {'title': language.code}] }, current_user.languages.ids), {}, { multiple: true }
-            
-          .material-field
             = f.label 'Date of Birth'
             = f.hidden_field :birthday
             .row
@@ -67,6 +63,14 @@
                 = select_tag :user_profile_birthday_day, options_for_select((1..31), current_user.birthday&.day), class: 'form-control datepicker'
               .col
                 = select_tag :user_profile_birthday_year, options_for_select((Date.current.year-100..Date.current.year).to_a.reverse, current_user.birthday&.year), class: 'form-control datepicker'
+                
+          .material-field.dropdown
+            = f.label 'Country'
+            = f.select :country_id, Country.all.map{ |c| [c.title, c.id, {'title': c.code}] }, {}, { class: 'form-control', required: true }
+                
+          .material-field
+            = f.label 'Language'
+            = f.select :language_ids, options_for_select(Language.all.map{ |language| [language.title, language.id, {'title': language.code}] }, current_user.languages.ids), {}, { multiple: true }
             
           .actions
             = f.submit 'Save', name: 'edit_profile', value: 'Save', class: 'btn btn-primary w-100'
