--- a/app/views/news_articles/_show.slim
+++ b/app/views/news_articles/_show.slim
@@ -5,7 +5,7 @@
         = news_category.title.capitalize
   
   - if news_article.img_url.present?
-    = image_tag(news_article.img_url, class: 'url-full-image')
+    = image_tag(news_article.img_url, class: 'url-full-image', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
   - else
     = image_pack_tag('media/images/placeholders/placeholder-news.png', class: 'url-full-image')
     
