Add view for Web Event#index, fix api bugs, update doc

--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -142,3 +142,10 @@ input[type="file"].upload-user-asset {
 label.upload-user-asset-button {
   cursor: pointer;
 }
+
+a.btn {
+  &.floating {
+    padding: 16px 24px;
+    border-radius: 28px;
+  }
+}
