--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -28,7 +28,7 @@ html
             li.nav-item
               = link_to 'Groups', root_path, class: 'nav-link'
             li.nav-item
-              = link_to 'Calendar', root_path, class: 'nav-link'
+              = link_to 'Calendar', events_path, class: 'nav-link'
             li.nav-item
               = link_to 'Images', images_user_image_path(current_user.username), class: 'nav-link'
             li.nav-item
