--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -39,11 +39,14 @@ $grid-breakpoints: (
 @import './news_articles/index';
 @import './user_profile/index';
 @import './video_player/index';
+@import './events/index';
 
 /**************************************
 * Import stylesheets from node modules:
 **************************************/
 @import '~bootstrap/scss/bootstrap'; // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import 'bootstrap-datepicker/dist/css/bootstrap-datepicker.css';
+@import 'jquery-timepicker/jquery.timepicker.css';
 
 /**************************************
 * Internal fonts:
