--- a/app/webpack/stylesheets/main-elements.scss
+++ b/app/webpack/stylesheets/main-elements.scss
@@ -23,3 +23,36 @@
   color: $color-white;
   margin-right: 8px;
 }
+
+// Datepicker
+.datepicker {
+  .datepicker-switch {
+    width: 180px;
+  }
+  
+  table tr td.active {
+    background-image: none;
+    background-color: $color-blue;
+    border-radius: 16px;
+  }
+}
+
+.datepicker.dropdown-menu {
+  padding: 1rem 2rem;
+}
+
+// Timepicker
+.ui-timepicker-standard {
+  border: none;
+  border-radius: 8px;
+  
+  .ui-state-hover {
+    background-color: $color-blue;
+    border: 1px solid $color-grey;
+    color: $color-white;
+  }
+  
+  a:hover {
+    text-decoration: none
+  }
+}
