Update Turbolinks initializer, change jquery-timepicker to timepicker

--- a/app/webpack/stylesheets/main-elements.scss
+++ b/app/webpack/stylesheets/main-elements.scss
@@ -42,17 +42,6 @@
 }
 
 // Timepicker
-.ui-timepicker-standard {
-  border: none;
-  border-radius: 8px;
-  
-  .ui-state-hover {
-    background-color: $color-blue;
-    border: 1px solid $color-grey;
-    color: $color-white;
-  }
-  
-  a:hover {
-    text-decoration: none
-  }
+.ui-timepicker-wrapper {
+  text-align: center;
 }
