--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -46,7 +46,7 @@ $grid-breakpoints: (
 **************************************/
 @import '~bootstrap/scss/bootstrap'; // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import 'bootstrap-datepicker/dist/css/bootstrap-datepicker.css';
-@import 'jquery-timepicker/jquery.timepicker.css';
+@import 'timepicker/jquery.timepicker.css';
 
 /**************************************
 * Internal fonts:
