--- a/app/views/events/index.slim
+++ b/app/views/events/index.slim
@@ -1,4 +1,4 @@
-= render 'shared/modals/new_event/', event: @event
+= render 'shared/modals/new_event/'
 
 .calendar-events-wrapper
   = render 'calendar', date: @date
