--- a/app/webpack/stylesheets/events/index.scss
+++ b/app/webpack/stylesheets/events/index.scss
@@ -4,4 +4,7 @@
 .calendar-events-wrapper {
   margin-top: 24px;
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
