--- a/app/webpack/stylesheets/events/event.scss
+++ b/app/webpack/stylesheets/events/event.scss
@@ -1,8 +1,7 @@
 .events-wrapper {
-  margin-left: 340px;
-  padding-bottom: 100px;
-  position: absolute;
-  top: 0;
+  margin-left: 16px;
+  width: 600px;
+  flex: 2 auto;
   
   .event-card {
     display: inline-block;
@@ -10,7 +9,7 @@
     margin-right: 16px;
     margin-bottom: 16px;
     align-items: center;
-    width: 284px;
+    width: calc(100%* 1/3 - 16px);
     min-height: 157px;
     
     background: $color-white;
@@ -51,17 +50,33 @@
     }
     
     .footer {
-      display: flex;
-      justify-content: space-between;
       padding: 6px 20px 8px 20px;
       height: 36px;
       border-top: 1px solid $color-light-grey;
-       img { margin-right: 4px; }
       
-      .date, .time {
+      .footer-content {
         display: flex;
-        align-items:center;
+        justify-content: space-between;
+        overflow: hidden;
+        
+        img { margin-right: 4px; }
+       
+       .date, .time {
+         font-size: 14px;
+         display: flex;
+         align-items: center;
+         white-space: nowrap;
+       }
       }
     }
   }
+}
+
+@media (max-width: map-get($grid-breakpoints, "lg")) {
+  .events-wrapper { width: 100%; margin-left: 0; margin-top: 16px; }
+  .events-wrapper .event-card { width: calc(100%* 1/2 - 16px); }
+}
+
+@media (max-width: map-get($grid-breakpoints, "md")) {
+  .events-wrapper .event-card { width: 100% }
 }
