--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -21,11 +21,11 @@
     .info-panel
       .info-panel-value-wrapper.pointer-disable
         i.ic.lit
-        span.info-panel-value #{@user.lits.count}
+        span.info-panel-value #{counter_measurement(@user.lits.count)}
         
       .info-panel-value-wrapper.pointer-disable
         i.ic.comment
-        span.info-panel-value #{@user.comments.count}
+        span.info-panel-value #{counter_measurement(@user.comments.count)}
         
       .info-panel-value-wrapper.pointer-disable
         i.ic.view
