--- a/app/views/comments/_index.slim
+++ b/app/views/comments/_index.slim
@@ -36,7 +36,7 @@
             = comment_timestamp(comment.created_at)
             
             .div class="#{ current_user ? 'comment-lit' : 'comment-lit pointer-disable' }"
-              span.info-panel-value.color-black #{comment.lits.size}
+              span.info-panel-value.color-black #{counter_measurement(comment.lits.size)}
               i class=(comment.is_lited(current_user) ? "ic lit active reverse" : "ic lit reverse")
       
       - if (index+1)%5 == 0 && Rails.env.production?
