Add SquadRequests and SquadMembers lists for Web

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -40,6 +40,7 @@ $grid-breakpoints: (
 @import './user_profile/index';
 @import './video_player/index';
 @import './events/index';
+@import './squad_requests/index';
 
 /**************************************
 * Import stylesheets from node modules:
