--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -32,8 +32,8 @@
         span.info-panel-value 0
         
     .user-profile-squad-buttons
-      = link_to "Requests", '', class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
-      = link_to "Squad", '', class: "btn btn-outline-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+      = link_to "Requests", squad_requests_path, class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+      = link_to "Squad", user_squad_members_path(current_user.username), class: "btn btn-outline-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
   
   - if @user.setting.is_images || @user == current_user
     .user-profile-assets-wrapper
