--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -32,8 +32,21 @@
         span.info-panel-value 0
         
     .user-profile-squad-buttons
-      = link_to "Requests", squad_requests_path, class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
-      = link_to "Squad", user_squad_members_path(current_user.username), class: "btn btn-outline-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+      - if @user == current_user
+        = link_to "Requests", squad_requests_path, class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+      
+      - if @user != current_user
+        - if @squad_request && @squad_request.accepted_at
+          = link_to "Remove From Squad", decline_squad_request_path(@squad_request, is_curent_user: true), method: :post, class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+        - elsif @squad_request
+          = link_to "Decline Request", decline_squad_request_path(@squad_request, is_curent_user: true), method: :post, class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+        - else
+          = link_to "Send Squad Request", squad_requests_path(squad_request: { receiver_username: @user.username }, is_curent_user: true), method: :post, class: "btn btn-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+          
+      - if @user == current_user
+        = link_to "Squad", user_squad_members_path(current_user.username), class: "btn btn-outline-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
+      - else
+        = link_to "Squad", user_squad_members_path(@user.username), class: "btn btn-outline-primary mx-2 fonts-styling #{@user.setting.font_family} #{@user.setting.font_style}"
   
   - if @user.setting.is_images || @user == current_user
     .user-profile-assets-wrapper
