--- a/app/webpack/stylesheets/comments/index.scss
+++ b/app/webpack/stylesheets/comments/index.scss
@@ -19,6 +19,11 @@
     width: 290px;
     margin-top: 10px;
     
+    &.replied {
+      padding: 10px;
+      background-color: $color-light-blue;
+    }
+    
     .comment-image-wrapper {}
     
     .comment-content-wrapper {
@@ -28,6 +33,11 @@
       padding-bottom: 10px;
       font-weight: 400;
       border-bottom: 1px solid $color-light-grey;
+      
+      &.replied {
+        border-bottom: none;
+        padding-bottom: 0;
+      }
       
       .comment-user-name {
         font-size: 16px;
@@ -70,7 +80,18 @@
         
         &.pointer-disable { cursor: default; }
       }
+      
+      .comment-reply-wrapper {
+        a.comment-reply {
+          font-size: 12px;
+          margin-top: 10px;
+        }
+      }
     }
+  }
+  
+  .reply-wrapper {
+    display: none;
   }
 }
 
