--- a/app/views/user_images/images.slim
+++ b/app/views/user_images/images.slim
@@ -5,6 +5,13 @@
         = image_tag(user_image.file.url, class: 'user-asset', data: { 'enlargeable': true, 'image-loaded': user_image.file.present?, 'image-id': user_image.id })
         
         - if user_image.user == current_user
+          - if user_image.is_private
+            = link_to user_image_path(id: user_image.id, user_image: { is_private: false}), class: 'update-asset', method: :put, data: { confirm: 'Do you really want make this Image Public?' } do
+              = image_pack_tag('media/images/icons/ic_private.png')
+          - else
+            = link_to user_image_path(id: user_image.id, user_image: { is_private: true}), class: 'update-asset', method: :put, data: { confirm: 'Do you really want make this Image Private?' } do
+              = image_pack_tag('media/images/icons/ic_public.png')
+            
           = link_to user_images_path(id: user_image.id), class: 'destroy-asset', method: :delete, data: { confirm: 'Do you really want to delete this Image?' } do
             = image_pack_tag('media/images/icons/ic_delete_object.png')
         
