--- a/app/views/user_videos/_form.slim
+++ b/app/views/user_videos/_form.slim
@@ -1,4 +1,8 @@
 = direct_upload_form_for @video_uploader do |f|
   = f.file_field :image, accept: 'video/mp4', class: 'upload-user-asset'
-  = f.label :image, class: 'upload-user-asset-button' do
-    = image_pack_tag('media/images/buttons/button_add_video.png')
+  
+  #container-floating-wrapper
+    #container-floating
+      = f.label :image do
+        #floating-button
+          p.plus #{image_pack_tag('media/images/icons/ic_plus.png')} Add Video
