--- a/app/webpack/stylesheets/user_profile/images.scss
+++ b/app/webpack/stylesheets/user_profile/images.scss
@@ -46,6 +46,12 @@
       box-sizing: border-box;
     }
     
+    .update-asset {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+    }
+    
     .destroy-asset {
       position: absolute;
       top: 8px;
