--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -65,6 +65,7 @@ html
                 = image_pack_tag('media/images/icons/ic_settings.png')
               .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownMenuButton"
                 = link_to 'Customize', customize_fonts_path, class: 'dropdown-item'
+                = link_to 'Change Password', edit_user_path(current_user.username), class: 'dropdown-item'
                 a.dropdown-item href="#" Contact Us
                 a.dropdown-item href="#" Privacy Policy & Terms of Use
                 a.dropdown-item href="#" About Us
