--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -66,7 +66,7 @@ html
               .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownMenuButton"
                 = link_to 'Customize', customize_fonts_path, class: 'dropdown-item'
                 = link_to 'Change Password', edit_user_path(current_user.username), class: 'dropdown-item'
-                a.dropdown-item href="#" Contact Us
+                = link_to 'Contact Us', new_contact_us_request_path, class: 'dropdown-item'
                 a.dropdown-item href="#" Privacy Policy & Terms of Use
                 a.dropdown-item href="#" About Us
                 = link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'dropdown-item no-border text-danger'
