--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -67,7 +67,7 @@ html
                 = link_to 'Customize', customize_fonts_path, class: 'dropdown-item'
                 = link_to 'Change Password', edit_user_path(current_user.username), class: 'dropdown-item'
                 = link_to 'Contact Us', new_contact_us_request_path, class: 'dropdown-item'
-                a.dropdown-item href="#" Privacy Policy & Terms of Use
+                = link_to 'Privacy Policy & Terms of Use', terms_and_services_legal_documents_path, class: 'dropdown-item'
                 = link_to "About Us", '', class: 'dropdown-item', data: { toggle: "modal", target: "#modal-about-us" }
                 = link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'dropdown-item no-border text-danger'
                 
