--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -100,6 +100,32 @@ input[type='radio']:checked:after {
   box-shadow: 0 0 0 2px $color-blue;
 }
 
+// Section
+.section-wrapper {
+  h1.section-title {
+    font-size: 14px;
+    font-weight: normal;
+    color: $color-grey;
+    padding: 10px 20px;
+    border-bottom: 1px solid $color-light-grey;
+    margin-bottom: 14px;
+  }
+  
+  .section-element {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px;
+    margin: 0px 20px;
+    border-bottom: 1px solid $color-light-grey;
+    margin-bottom: 14px;
+    
+    .section-element-lable {
+      font-size: 16px;
+      font-weight: normal;
+    }
+  }
+}
+
 // Checkbox
 .form-check label {
   color: $color-black;
