Small update for Setting form

--- a/app/views/settings/edit.slim
+++ b/app/views/settings/edit.slim
@@ -38,4 +38,4 @@
             = f.check_box :is_videos
             span.slider.default.round
             
-      = f.submit 'Submit', class: 'btn btn-primary w-100'
+      = f.submit 'Submit', class: 'btn btn-primary w-100 mt-4'
