--- a/app/webpack/stylesheets/groups/groups.scss
+++ b/app/webpack/stylesheets/groups/groups.scss
@@ -8,36 +8,43 @@
     overflow: auto;
     width: 100%;
     height: 100%;
+    
+    // Checkboxes
+    .group-wrapper ul { display: none; }
+    .group-wrapper input:checked ~ ul { display: block; }
+    .group-wrapper input[type=checkbox] { display: none; }
   
     .group-wrapper {
       width: 100%;
-      display: flex;
+      display: block;
       padding: 0px 0px 0px 18px;
       align-items: center;
       
-      &.active {
-        background-color: $color-cadet-blue;
-      }
-      
-      img {
-        height: 20px;
-        width: 20px;
-      }
-      
       .main-content {
+        margin: auto;
         display: flex;
         padding: 18px 0;
-        margin-left: 18px;
+        
         width: 100%;
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid $color-light-grey;
         
+        &.active {
+          background-color: $color-cadet-blue;
+        }
+        
         .title-wrapper {
           display: flex;
           
+          img {
+            height: 20px;
+            width: 20px;
+          }
+          
           p {
             margin: 0;
+            margin-left: 18px;
             font-size: 14px;
             font-weight: 500;
             &.active { font-weight: 700; }
@@ -54,21 +61,19 @@
         
         .counter-dropdown-wrapper {
           span.counter {
-            color: $color-grey
+            color: $color-grey;
+            margin-right: 18px
           }
           
-          img.dropdown {
+          label {
+            cursor: pointer;
+            content: url("../images/icons/ic_dropdown_arrow.png");
             width: 12px;
             height: auto;
-            margin: 0 18px;
+            margin: 0 18px 0 0;
           }
         }
       }
-      
-      &.n1 { padding-left: 40px }
-      &.n2 { padding-left: 80px }
-      &.n3 { padding-left: 120px }
-      &.n4 { padding-left: 160px }
     }
     
     .group-search-wrapper {
